<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="PRG_GATT" Id="{9bc19380-71cb-4a16-a17f-dc2d91300aba}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_GATT
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// FB_TurboPump

fb_AT1K0_GAS_PTM_10(stVlInlet := st_AT1K0_GAS_VRC_10_VOL, stVlOutlet := st_AT1K0_GAS_PTM_10_VOL, stPump := st_AT1K0_GAS_PTM_10);
fb_AT1K0_GAS_PTM_20(stVlInlet := st_AT1K0_GAS_VRC_20_VOL, stVlOutlet := st_AT1K0_GAS_PTM_10_VOL, stPump := st_AT1K0_GAS_PTM_20);
fb_AT1K0_GAS_PTM_30(stVlInlet := st_AT1K0_GAS_VRC_30_VOL, stVlOutlet := st_AT1K0_GAS_PTM_10_VOL, stPump := st_AT1K0_GAS_PTM_30);
fb_AT1K0_GAS_PTM_40(stVlInlet := st_AT1K0_GAS_VRC_40_VOL, stVlOutlet := st_AT1K0_GAS_PTM_10_VOL, stPump := st_AT1K0_GAS_PTM_40);
fb_AT1K0_GAS_PTM_110(stVlInlet := st_AT1K0_GAS_VRC_110_VOL, stVlOutlet := st_BypassLine2, stPump := st_AT1K0_GAS_PTM_110);
fb_AT1K0_GAS_PTM_120(stVlInlet := st_AT1K0_GAS_VRC_120_VOL, stVlOutlet := st_AT1K0_GAS_PTM_120_VOL, stPump := st_AT1K0_GAS_PTM_120);
fb_AT1K0_GAS_PTM_130(stVlInlet := st_AT1K0_GAS_VRC_130_VOL, stVlOutlet := st_AT1K0_GAS_PTM_120_VOL, stPump := st_AT1K0_GAS_PTM_130);
fb_AT1K0_GAS_PTM_140(stVlInlet := st_AT1K0_GAS_VRC_140_VOL, stVlOutlet := st_AT1K0_GAS_PTM_140_VOL, stPump := st_AT1K0_GAS_PTM_140);

// FB_VacuumValve

fb_AT1K0_GAS_VRC_10(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_10_VOL, stValve := st_AT1K0_GAS_VRC_10);
fb_AT1K0_GAS_VRC_20(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_20_VOL, stValve := st_AT1K0_GAS_VRC_20);
fb_AT1K0_GAS_VRC_30(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_30_VOL, stValve := st_AT1K0_GAS_VRC_30);
fb_AT1K0_GAS_VRC_40(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_40_VOL, stValve := st_AT1K0_GAS_VRC_40);
fb_AT1K0_GAS_VRC_50(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_50_VOL, stValve := st_AT1K0_GAS_VRC_50);
fb_AT1K0_GAS_VRC_60(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_50_VOL, stValve := st_AT1K0_GAS_VRC_60);
fb_AT1K0_GAS_VRC_90(stAVol := st_GATT, stBvol := st_BypassLine1, stValve := st_AT1K0_GAS_VRC_90);
fb_AT1K0_GAS_VRC_100(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_100_VOL, stValve := st_AT1K0_GAS_VRC_100);
fb_AT1K0_GAS_VRC_110(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_110_VOL, stValve := st_AT1K0_GAS_VRC_110);
fb_AT1K0_GAS_VRC_120(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_120_VOL, stValve := st_AT1K0_GAS_VRC_120);
fb_AT1K0_GAS_VRC_130(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_130_VOL, stValve := st_AT1K0_GAS_VRC_130);
fb_AT1K0_GAS_VRC_140(stAVol := st_GATT, stBvol := st_AT1K0_GAS_VRC_140_VOL, stValve := st_AT1K0_GAS_VRC_140);

// FB_MKS_275

fb_AT1K0_GAS_GPI_10(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_10);
fb_AT1K0_GAS_GPI_20(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_20);
fb_AT1K0_GAS_GPI_11(stVolume := st_AT1K0_GAS_PTM_10_VOL, stGauge := st_AT1K0_GAS_GPI_11);
fb_AT1K0_GAS_GPI_30(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_30);
fb_AT1K0_GAS_GPI_40(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_40);
fb_AT1K0_GAS_GPI_50(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_50);
fb_AT1K0_GAS_GPI_60(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_60);
fb_AT1K0_GAS_GPI_51(stVolume := st_AT1K0_GAS_VRC_50_VOL, stGauge := st_AT1K0_GAS_GPI_51);
fb_AT1K0_GAS_GPI_80(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_80);
fb_AT1K0_GAS_GPI_90(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_90);
fb_AT1K0_GAS_GPI_100(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_100);
fb_AT1K0_GAS_GPI_111(stVolume := st_BypassLine2, stGauge := st_AT1K0_GAS_GPI_111);
fb_AT1K0_GAS_GPI_110(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_110);
fb_AT1K0_GAS_GPI_121(stVolume := st_AT1K0_GAS_PTM_120_VOL, stGauge := st_AT1K0_GAS_GPI_121);
fb_AT1K0_GAS_GPI_120(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_120);
fb_AT1K0_GAS_GPI_130(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_130);
fb_AT1K0_GAS_GPI_141(stVolume := st_AT1K0_GAS_PTM_140_VOL, stGauge := st_AT1K0_GAS_GPI_141);
fb_AT1K0_GAS_GPI_140(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GPI_140);

// FB_MKS_422

fb_AT1K0_GAS_GCC_10(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_10);
fb_AT1K0_GAS_GCC_20(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_20);
fb_AT1K0_GAS_GCC_30(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_30);
fb_AT1K0_GAS_GCC_40(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_40);
fb_AT1K0_GAS_GCC_50(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_50);
fb_AT1K0_GAS_GCC_60(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_60);
fb_AT1K0_GAS_GCC_80(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_80);
fb_AT1K0_GAS_GCC_90(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_90);
fb_AT1K0_GAS_GCC_100(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_100);
fb_AT1K0_GAS_GCC_110(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_110);
fb_AT1K0_GAS_GCC_120(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_120);
fb_AT1K0_GAS_GCC_130(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_130);
fb_AT1K0_GAS_GCC_140(stVolume := st_GATT, stGauge := st_AT1K0_GAS_GCC_140);

// FB_RoughPump

fb_AT1K0_GAS_PMF_10(stVolInlet := st_AT1K0_GAS_PTM_10_VOL, stPump := st_AT1K0_GAS_PMF_10);
fb_AT1K0_GAS_PMF_60(stVolInlet := st_AT1K0_GAS_VRC_50_VOL, stPump := st_AT1K0_GAS_PMF_60);
]]></ST>
    </Implementation>
    <LineIds Name="PRG_GATT">
      <LineId Id="6" Count="6" />
      <LineId Id="14" Count="60" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>